2001-07-11  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: fix credits

	* doc/sgml/C/xacc-about.sgml: fix docs, credits

2001-07-11  James LewisMoss  <jimdres@mindspring.com>

	* configure.in (GNOME_XML_CFLAGS): add Richard Braakman's xml
	version check.

2001-07-09  Dave Peticolas  <dave@krondo.com>

	* configure.in: check for ghttp_ssl.h

	* src/gnome/gnc-http.c: conditionally include ghttp_ssl.h

	* doc/sgml/C/xacc-whats-new.sgml: fix spelling

	* doc/sgml/C/xacc-about.sgml: fix version

	* src/Makefile.am: link intl libs with gnucash-make-guids

	* src/register/QuickFill.c: same as below

	* src/register/quickfillcell.c: conditionally include wctype.h

	* configure.in: check for wctype.h

2001-07-07  Dave Peticolas  <dave@krondo.com>

	* src/test/gnc-test-stuff.c (get_random_query): not so many terms

	* src/test/Makefile.am: add test-scm-query

	* src/test/.cvsignore: add test-scm-query

	* src/test/test-scm-query.c: new test -- check query<->scm
	conversion

	* src/guile/gnucash.h: new func api

	* src/guile/gnucash.c.in (gnc_gw_init): new func

	* src/guile/gnc-helpers.c: fix bugs

	* src/engine/Query.c: fix bugs

2001-07-04  Bill Gribble  <grib@billgribble.com>

	* backport QIF import fixes from 1.7 tree

2001-07-04  Dave Peticolas  <dave@krondo.com>

	* src/scm/depend.scm: disable load time output

	* src/scm/commodity-utilities.scm: use srfi-1 to get the
	right 'last'.

2001-07-04  Rob Browning  <rlb@defaultvalue.org>

	* src/gnome/glade/.cvsignore: create and add Makefile and
	Makefile.in.

	* src/scm/report/report-list.scm: switch to use-modules for
	some reports.

	* po/.cvsignore: add ChangeLog.

	* src/scm/report/transaction-report.scm: renamed to transaction.scm

	* src/scm/report/transaction.scm: renamed from
	transaction-report.scm and converted to guile module.

	* src/scm/report/taxtxf.scm: convert to guile module.

	* src/scm/report/register.scm: convert to guile module.

	* src/scm/report/price-scatter.scm: convert to guile module.
